--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -52,6 +52,7 @@
   bottom: 0;
   left: 0;
   right: 0;
+  z-index: 1;
 }
 .nav-search, .nav-bookmark {
   display: flex;
@@ -77,7 +78,7 @@
   margin-left: 8px;
 }
 
-/* Contenido de gatos */
+/* App de gatos */
 #app {
   width: 100%;
   min-height: 100vh;
@@ -85,36 +86,38 @@
   background-color: #1f1f1f;
 
 }
-
 .name {
   color: azure;
   text-align: center;
   font-size:xx-large;
 }
 
+/* seccion de imagenes random */
 .discover {
   display: flex;
   flex-wrap: wrap;
   justify-items: center;
-  width: 75%;
+  width: 90%;
   margin: 0 auto;
 }
 
-.test {
+/* Estilos de cada imagen */
+.image {
   width: 50%;
   padding: 16px;
+  position: relative;
 }
-
 contra-photo {
   --color: white;
 }
-
-large-button:hover svg {
+like-button {
+  position: absolute;
+  top: 25px;
+  right: 25px;
+}
+like-button:hover svg {
   stroke: #f91880;
 }
-
-large-button:active svg {
+like-button:active svg {
   fill: #f91880;
 }
-
-
