Color del like o dislike solo cuando se confirma desde la API

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -101,7 +101,7 @@
 }
 
 /* seccion de imagenes random */
-#discover {
+#discover, #favorites {
   display: flex;
   flex-wrap: wrap;
   justify-items: center;
