--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -73,6 +73,16 @@
   background-color: var(--black-100);
   border-radius: 20px;
 }
+.nav span:nth-child(2) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 48px;
+  padding: 12px;
+  margin: 0 10px;
+  background-color: var(--black-100);
+  border-radius: 50%;
+}
 .nav span svg {
   fill: var(--yellow);
   stroke: var(--black);
