--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -38,7 +38,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Montserrat, sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 /* Menu principal */
@@ -96,7 +96,6 @@
 }
 .nav span p {
   color: var(--black);
-  font-family: 'Montserrat';
   font-weight: 800;
   font-size: 13px;
   margin-left: 8px;
@@ -112,7 +111,7 @@
 }
 
 /* seccion de imagenes random */
-#discover, #favorites {
+#discover, #upload, #favorites{
   display: flex;
   flex-wrap: wrap;
   justify-items: center;
@@ -121,11 +120,63 @@
 }
 
 /* Estilos de cada imagen */
-.image {
+#discover .image, #favorites .image {
   width: 50%;
   padding: 16px;
   position: relative;
 }
+
+/* seccion de publicar fotos */
+#upload {
+  flex-direction: column;
+  align-items: center;
+}
+
+/* Estilos del contendor para subir fotos */
+.uploading {
+  display: flex;
+  flex-direction: column;
+}
+.uploading h2 {
+  color: var(--black-100);
+  text-align: center;
+  margin-bottom: 12px;
+}
+
+#uploadingForm input {
+  display: none;
+}
+
+#uploadingForm label, .uploading .uploadButton {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 12px;
+  background-color: var(--black-100);
+  border-radius: 12px;
+  color: var(--black);
+  font-weight: 800;
+  font-size: 13px;
+}
+
+#uploadingForm .imgPreview {
+  width: 100%;
+  border-radius: 12px;
+  margin-top: 24px;
+}
+
+.uploading .uploadButton {
+  margin-top: 24px;
+  border: none;
+}
+
+#uploadingForm label svg, .uploading .uploadButton svg {
+  margin-right: 8px;
+}
+
+
 contra-photo {
   --color: white;
 }
