Guardar las fotos subidas a favoritos y nuevo favicon

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -172,6 +172,11 @@
   border: none;
 }
 
+.uploading .saveIMG {
+  background-color: var(--yellow-800);
+}
+
+
 #uploadingForm label svg, .uploading .uploadButton svg {
   margin-right: 8px;
 }
